--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -30,10 +30,15 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.8.2",
+        "body-parser": "^1.19.0",
         "bootstrap": "4.3.1",
+        "express": "^4.17.1",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "mongodb": "^3.2.7",
+        "nodemon": "^1.19.1",
+        "socket.io": "^2.2.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.5",
