--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "name": "startbootstrap-creative",
     "version": "5.1.6",
     "scripts": {
-        "start": "gulp watch"
+        "start": "server.js",
+        "build":"webpack"
+
     },
     "description": "Creative is a stylish one page HTML theme for Bootstrap.",
     "keywords": [
