--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "startbootstrap-creative",
     "version": "5.1.6",
     "scripts": {
-        "start": "server.js",
+        "start": "node server.js",
         "build":"webpack"
 
     },
