--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "npm": "6.x"
       },
     "scripts": {
-        "start": "node server.js",
-        "build":"webpack"
+        "start": "node server.js"
 
     },
     "description": "Creative is a stylish one page HTML theme for Bootstrap.",
