--- a/package.json
+++ b/package.json
@@ -19,13 +19,9 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/template-overviews/creative",
-    "bugs": {
-        "url": "https://github.com/BlackrockDigital/startbootstrap-creative/issues",
-        "email": "feedback@startbootstrap.com"
-    },
+    
     "license": "MIT",
-    "author": "Start Bootstrap",
+    "author": "Mohini Ronghe",
     
     "repository": {
         "type": "git",
