--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "title": "Creative",
-    "name": "startbootstrap-creative",
+    "name": "portfolio",
     "version": "5.1.6",
     "engines": {
         "node": "14.x",
         "npm": "6.x"
       },
+    main:"index.html"
     "scripts": {
         "start": "node server.js"
 
