--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "node": "14.x",
         "npm": "6.x"
       },
-    main:"index.html"
+  "main": "index.html",
     "scripts": {
         "start": "node server.js"
 
